nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/LogEntryEventMapping__mdt.object-meta.xml
<CustomObject>
    <label>Log Entry Event Mapping</label>
    <pluralLabel>Log Entry Event Mappings</pluralLabel>
</CustomObject>