nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/fields/LogEntryEventField__c.field-meta.xml
<CustomField>
    <fullName>LogEntryEventField__c</fullName>
    <label>Log Entry Event Field</label>
    <metadataRelationshipControllingField>LogEntryEventMapping__mdt.LogEntryEventSObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Log_Entry_Event_Mappings</relationshipLabel>
    <relationshipName>Log_Entry_Event_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>