nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/fields/LogEntryEventSObject__c.field-meta.xml
<CustomField>
    <fullName>LogEntryEventSObject__c</fullName>
    <label>Log Entry Event Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Log_Entry_Event_Mappings</relationshipLabel>
    <relationshipName>Log_Entry_Event_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>