nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/fields/MappedField__c.field-meta.xml
<CustomField>
    <fullName>MappedField__c</fullName>
    <label>Mapped Field</label>
    <metadataRelationshipControllingField>LogEntryEventMapping__mdt.MappedSObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Log_Entry_Event_Mappings1</relationshipLabel>
    <relationshipName>Log_Entry_Event_Mappings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>