nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/fields/MappedSObject__c.field-meta.xml
<CustomField>
    <fullName>MappedSObject__c</fullName>
    <label>Mapped Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Log_Entry_Event_Mappings1</relationshipLabel>
    <relationshipName>Log_Entry_Event_Mappings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>