nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/validationRules/Invalid_Mapping_Object_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Mapping_Object_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    MappedSObject__r.DeveloperName != &apos;Log&apos;,
    MappedSObject__r.DeveloperName != &apos;LogEntry&apos;
)</errorConditionFormula>
    <errorDisplayField>MappedSObject__c</errorDisplayField>
    <errorMessage>You must select either the Log or Log Entry object</errorMessage>
</ValidationRule>