nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/validationRules/Log_Entry_Event_Object_Not_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_Entry_Event_Object_Not_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>LogEntryEventSObject__r.DeveloperName != &apos;LogEntryEvent&apos;</errorConditionFormula>
    <errorDisplayField>LogEntryEventSObject__c</errorDisplayField>
    <errorMessage>You must select the Log Entry Event object</errorMessage>
</ValidationRule>