nebula-logger/main/mappings/objects/LogEntryEventMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>LogEntryEventSObject__c</columns>
    <columns>LogEntryEventField__c</columns>
    <columns>MappedSObject__c</columns>
    <columns>MappedField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>